[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpu_opti_flow"
authors = [
    {name = "Ahmed Chabib", email = "ahmed.chabib16@gmail.com"},
]
maintainers = [
    {name = "Antoine Weisrock", email = "antoine.weisrock@gmail.com"},
]
description ="A python module for accelerated optical flow measurement."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["Optical Flow", "Correlation", "GPU"]
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20.3",
    "scikit-image>=0.16.2",
    "scipy>=1.6.3",
    "opencv-python>=4.2.0",
    "matplotlib"
]

version = "0.0.1"

[tool.setuptools.packages.find]
where = ["Src"]
namespaces = false
